@@ -11,5 +11,4 @@ before_install:
 install:
   - ./synclibs.sh && ./autogen.sh
 script:
-  - ./configure --enable-python && make && make check
-  - if test -f tests/test-suite.log; then cat tests/test-suite.log; fi
+  - ./runtests.sh
