@@ -84,6 +84,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20141219
+* worked on Python 3 support
+
 20141216
 * worked on Python 3 support
 
